Moved logic to a common module for access from other projects.