@@ -1,20 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project
-        xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
-    <parent>
-        <groupId>ikube</groupId>
-        <artifactId>ikube</artifactId>
-        <version>5.3.1</version>
-        <relativePath>../../pom.xml</relativePath>
-    </parent>
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>ikube</groupId>
     <artifactId>ikube-com</artifactId>
+    <version>6.0.0</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <lucene-version>4.8.0</lucene-version>
+        <slf4j-version>1.6.4</slf4j-version>
+        <commons-io-version>2.0.1</commons-io-version>
+        <commons-lang-version>2.5</commons-lang-version>
+        <opencsv-version>2.3</opencsv-version>
+        <log4j-version>1.2.16</log4j-version>
+        <combinatoricslib-version>2.0</combinatoricslib-version>
+        <commons-beanutils-version>1.8.3</commons-beanutils-version>
+        <javaee-api-version>7.0</javaee-api-version>
+        <jersey-version>1.18.1</jersey-version>
+        <dom4j-version>1.6.1</dom4j-version>
+        <gson-version>2.0</gson-version>
+        <junit-version>4.8.2</junit-version>
+        <jmockit-version>1.8</jmockit-version>
+        <httpclient-version>4.2.1</httpclient-version>
+        <mockito-all-version>1.9.5</mockito-all-version>
+        <simple-jndi-version>0.11.4.1</simple-jndi-version>
+        <tika-version>1.7</tika-version>
+
+        <targetJdk>1.7</targetJdk>
+        <encoding>UTF8</encoding>
+
+        <spring-version>3.2.4.RELEASE</spring-version>
+
+        <!-- Serenity parameters -->
+        <write-classes>-Dwrite.classes=false</write-classes>
+        <clean-classes>-Dclean.classes=true</clean-classes>
+        <included-packages>-Dincluded.packages=ikube</included-packages>
+        <excluded-packages>-Dexcluded.packages=model:Mock:Test:Integration:Option:Scanner</excluded-packages>
+        <included-adapters>-Dincluded.adapters=coverage:complexity:dependency</included-adapters>
+        <serenity-parameters>${write-classes} ${clean-classes} ${included-packages} ${excluded-packages} ${included-adapters} -noverify</serenity-parameters>
+
+        <headless-parameters>-Djava.awt.headless=true</headless-parameters>
+        <memory-parameters>-XX:PermSize=1024m -XX:MaxPermSize=2048m -Xms2048m -Xmx4096m</memory-parameters>
+    </properties>
+
+    <developers>
+        <developer>
+            <id>michaelcouck</id>
+            <email>michael.couck@gmail.com</email>
+            <name>Michael Couck</name>
+            <url>https://github.com/michaelcouck</url>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <site>
+            <id>ikube-releases</id>
+            <name>ikube-releases</name>
+            <url>file:/home/michael/.m2/repository</url>
+        </site>
+        <repository>
+            <id>libs-release-local</id>
+            <name>libs-release-local</name>
+            <url>http://ikube.be/artifactory/libs-release-local</url>
+        </repository>
+        <snapshotRepository>
+            <id>libs-snapshot-local</id>
+            <name>libs-snapshot-local</name>
+            <url>http://ikube.be/artifactory/libs-release-local</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <resources>
@@ -30,6 +90,48 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
             </plugin>
+
+            <!-- This plugin compiles the sources. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${targetJdk}</source>
+                    <target>${targetJdk}</target>
+                    <encoding>${encoding}</encoding>
+                    <failOnError>true</failOnError>
+                    <compilerArguments>
+                        <verbose/>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
+            <!-- Attaches the sources to the artifacts. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- This plugin runs the unit tests. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.1</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <!--suppress MavenModelInspection -->
+                    <argLine>-javaagent:${project.basedir}/../../serenity/serenity.jar ${headless-parameters} ${serenity-parameters} ${memory-parameters}</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -37,71 +139,153 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+            <version>${commons-io-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
+            <version>${commons-lang-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>${spring-version}</version>
         </dependency>
         <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
+            <version>${opencsv-version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+            <version>${log4j-version}</version>
         </dependency>
         <dependency>
             <groupId>combinatoricslib</groupId>
             <artifactId>combinatoricslib</artifactId>
+            <version>${combinatoricslib-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils-version}</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
+            <version>${javaee-api-version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
+            <version>${jersey-version}</version>
         </dependency>
         <dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
+            <version>${dom4j-version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>${gson-version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
         </dependency>
         <dependency>
-            <groupId>mockit</groupId>
+            <groupId>org.jmockit</groupId>
             <artifactId>jmockit</artifactId>
+            <version>${jmockit-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <version>${httpclient-version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
+            <version>${mockito-all-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>simple-jndi</groupId>
+            <artifactId>simple-jndi</artifactId>
+            <version>${simple-jndi-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>${lucene-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-highlighter</artifactId>
+            <version>${lucene-version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>lucene-analyzers</artifactId>
+                    <groupId>org.apache.lucene</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-spatial</artifactId>
+            <version>${lucene-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-misc</artifactId>
+            <version>${lucene-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-classification</artifactId>
+            <version>${lucene-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>${lucene-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>${tika-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>${tika-version}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>ikube</id>
+            <url>http://ikube.be/artifactory/libs-release-local/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
